# penguins

./: README.md  pyproject.toml
models/: dt.pck  knn.pck  lr.pck  serialize.py  svm.pck
penguins/: client.py  service.py
