[tool.poetry]
name = "penguins"
version = "0.1.0"
description = ""
authors = ["Roberto <robervz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
flask = "^3.1.0"
seaborn = "^0.13.2"
numpy = "^2.2.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
